@@ -198,6 +198,9 @@ Trunk (unreleased changes)
     HADOOP-3429. Increases the size of the buffers used for the communication
     for Streaming jobs. (Amareshwari Sriramadasu via ddas)
 
+    HADOOP-3486. Change default for initial block report to 0 seconds
+    and document it. (Sanjay Radia via omalley)
+
   OPTIMIZATIONS
 
     HADOOP-3274. The default constructor of BytesWritable creates empty 
